--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
-			     <a href="http://132.248.9.195/ptd2021/noviembre/0819767/Index.html">
+			     <a href="http://132.248.9.195/ptd2021/noviembre/0819767/Index.html" target="_blank">
                                 Minimizing structures for elastic energy in phase transitions under the regime of linear
                                 geometric theory in thin films
                                 </p></div>
@@ -212,7 +212,7 @@
                                 <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
-			     <a href="http://132.248.9.195/ptd2016/enero/0740310/Index.html">
+			     <a href="http://132.248.9.195/ptd2016/enero/0740310/Index.html" target="_blank">
                                 Phase transitions in thin film linear geometric theory
 			     </a>
                             </p></div>
@@ -229,7 +229,7 @@
                                 <b> Facultad de Ciencias - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
-				     <a href="http://132.248.9.195/ptd2013/diciembre/0706972/Index.html">
+				     <a href="http://132.248.9.195/ptd2013/diciembre/0706972/Index.html" target="_blank">
                                     Existence of annular vortices with borders close to internal current lines of spherical hill vortex
 				     </a>
                                 </p></div>
