--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Articulo_3_1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">In preparation</div>
@@ -448,10 +448,10 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Nonlinear stability of static Neel walls in ferromagnetic thin films</h2>-->
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
+			            <p><a href="https://arxiv.org/abs/2309.04432"> Go to arXiv</a></p>		
 					<ul class="list-inline">
-                                       
                                         <li>
                                             <strong>Category:</strong>
                                             Micromagnetism, Sprectral Theory and Nolinear Stability
