--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
                                     <!--<h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/pdf/2012.02871.pdf"> Go to arXiv</a></p>
-				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4"> Go to published version</a></p>
+				    <p><a href="https://arxiv.org/pdf/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Topic:</strong>
@@ -418,8 +418,8 @@
                                     <!--<h2 class="text-uppercase">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_2_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/pdf/2012.06626.pdf"> Go to arXiv</a></p>
-				    <p><a href="https://link.springer.com/article/10.1007/s10659-021-09878-w"> Go to published version</a></p>
+				    <p><a href="https://arxiv.org/pdf/2012.06626.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://link.springer.com/article/10.1007/s10659-021-09878-w" target="_blank"> Go to published version</a></p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
@@ -450,7 +450,7 @@
                                     <!--<h2 class="text-uppercase">Nonlinear stability of static Neel walls in ferromagnetic thin films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
-			            <p><a href="https://arxiv.org/abs/2309.04432"> Go to arXiv</a></p>		
+			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
