--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/capella.jpeg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
                             <h4>Dr. Antonio Capella</h4>
                             <p class="text-muted">IMATE - UNAM</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a>
