--- a/index.html
+++ b/index.html
@@ -66,24 +66,21 @@
 			
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
-                            I am a mathematician and i am interestig in eliptic partial differential equations,
-                            more specifically in the analysis and regularity aspects
-                            of these equations. 
-				<br></br>
-			    My contributions 
-                            I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
-                            Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
+                            I consider myself a skilled person who easily adapts to different situations and working conditions.
+				I am interested in the study of
+				complex material phenomena such as phase transitions, nucleation,  and stability and dynamics of microstructure. 
+				I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
 			</p>
 			<p class="text-muted">
 			    My research interests include: 
 				<ul class="text-muted">
   					<li>Calculus of Variations</li>
  					 <li>Partial Differential Equations</li>
-  					<li>Analyisis</li>
+  					<li>Analysis</li>
 					<li>Statistics and Probability</li>
-					<li>Scientific Programation</li>
+					<li>Scientific Programming</li>
 				</ul>
-                	
+                	My two biggest hobbies are spending time with my wife and learning about coffee extractions.
 			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
 			    <a href="assets/img/cv-2023-spanish.pdf"> English CV
 			</a> 
@@ -322,7 +319,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Thanks to my mentors and friends  I learned to apply mathematics at different fields</p></div>
                 </div>
             </div>
         </section>
