--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<li>Statistics and Probability</li>
 					<li>Scientific Programming</li>
 				</ul>
-                	My two biggest hobbies are spending time with my wife and learning about coffee extractions.
+                	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
 			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
 			    <a href="assets/img/cv-2023-spanish.pdf"> English CV
 			</a> 
