--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
                             <h4>Dr. Antonio Capella</h4>
                             <p class="text-muted">IMATE - UNAM</p>
-			    <a href="https://www.python.org/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
+			    <a href="https://www.python.org/" target="_blank"><img class="btn btn-dark btn-social mx-2" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a>
                             
                         </div>
@@ -330,16 +330,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.python.org/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
+                        <a href="https://www.python.org/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Python Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.latex-project.org/help/documentation/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Google Logo" /></a>
+                        <a href="https://www.latex-project.org/help/documentation/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Latex Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://la.mathworks.com/academia.html?s_tid=gn_acad" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Facebook Logo" /></a>
+                        <a href="https://la.mathworks.com/academia.html?s_tid=gn_acad" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Matlab Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                      <a href="https://www.arduino.cc/" target="_blank"> <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" /> </a>
+                      <a href="https://www.arduino.cc/" target="_blank"> <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Arduino Logo" /> </a>
                     </div>
                 </div>
             </div>
