--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
                             <h4>Dr. Antonio Capella</h4>
                             <p class="text-muted">IMATE - UNAM</p>
-			    <a href="https://www.python.org/" target="_blank"><img class="btn btn-dark btn-social mx-2" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
+			    <a  class="btn btn-dark btn-social mx-2" href="https://www.python.org/" target="_blank"><img class="btn btn-dark btn-social mx-2" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a>
                             
                         </div>
