--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
-                            <h4>Dr. Antonio Capella</h4>
-                            <p class="text-muted">IMATE - UNAM</p>
-			    <p class="text-muted">IMATE - UNAM><a href="https://www.python.org/" target="_blank"><img class = img-fluid img-brand d-block mx-auto src="assets/img/logos/python-svgrepo-com.svg" alt="..."/></a></p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <h4>Dr. Antonio Capella<a href="https://paginas.matem.unam.mx/capella/" target="_blank"></a></h4>
+                            <p class="text-muted">IMATE - UNAM<a href="https://www.matem.unam.mx/" target="_blank"></a></p>
+			    
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                             
                         </div>
                     </div>
