--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
                             <h4>Dr. Antonio Capella<a href="https://paginas.matem.unam.mx/capella/" target="_blank"></a></h4>
-                            <p class="text-muted">IMATE - UNAM<a href="https://www.matem.unam.mx/" target="_blank"></a></p>
+                             <a href="https://www.matem.unam.mx/" target="_blank"> <p class="text-muted"> IMATE - UNAM </p> /a> 
 			    
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                             
