--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/antonio.png" alt="..." />
-                            <h4>Dr. Antonio Capella<a href="https://paginas.matem.unam.mx/capella/" target="_blank"></a></h4>
-                             <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:right" > </a> <p class="text-muted"> IMATE - UNAM </p>
+                            <a href="https://paginas.matem.unam.mx/capella/" target="_blank"><h4>Dr. Antonio Capella</h4></a>
+                             <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:left" > </a> <p class="text-muted"> IMATE - UNAM </p>
 			    
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                             
