--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
-                            <h4>Dr. Ramon Plaza</h4>
+                             <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
                             <p class="text-muted">IIMAS - UNAM</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
                            
@@ -313,7 +313,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
-                            <h4>Dr. Hector Chang</h4>
+                             <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
                             <p class="text-muted">CIMAT - CONAHCYT</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                            
