--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <a href="https://paginas.matem.unam.mx/capella/" target="_blank"><h4>Dr. Antonio Capella</h4></a>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
-			    <div>
+			    <div text-align: center;>
                              <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
 			    </div>
                     </div>
