--- a/index.html
+++ b/index.html
@@ -306,9 +306,10 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
                              <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
                             <p class="text-muted">IIMAS - UNAM</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                           
                         </div>
+			    <div text-align: center;>
+                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+			    </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
@@ -318,6 +319,9 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                            
                         </div>
+			    <div text-align: center;>
+                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+			    </div>
                     </div>
                 </div>
                 <div class="row">
