--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <a href="https://paginas.matem.unam.mx/capella/" target="_blank"><h4>Dr. Antonio Capella</h4></a>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
-			    <div text-align: center;>
+			    <div text-align: center>
                              <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
 			    </div>
                     </div>
@@ -316,8 +316,6 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
                              <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
                             <p class="text-muted">CIMAT - CONAHCYT</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                           
                         </div>
 			    <div text-align: center;>
                              <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
