--- a/index.html
+++ b/index.html
@@ -305,20 +305,18 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
                              <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
-                            <p class="text-muted">IIMAS - UNAM</p>
                         </div>
 			    <div text-align: center;>
-                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IIMAS - UNAM </p>
 			    </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4" text-align: center;>
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
                              <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
-                            <p class="text-muted">CIMAT - CONAHCYT</p>
                         </div>
-			    <div text-align: center;>
-                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+			    <div>
+                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted">CIMAT - CONAHCYT </p>
 			    </div>
                     </div>
                 </div>
