--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Carrer Advices</h2>
+                    <h2 class="section-heading text-uppercase">Working Network</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row">
