--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                              <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
                         </div>
 			    <div text-align: center;>
-                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" padding: 10px;> </a> <p class="text-muted"> IIMAS - UNAM </p>
+                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" padding: 50px> </a> <p class="text-muted"> IIMAS - UNAM </p>
 			    </div>
                     </div>
                     <div class="col-lg-4" text-align: center;>
