--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                              <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" padding: 50px> </a> <p class="text-muted"> IIMAS - UNAM </p>
 			    </div>
                     </div>
-                    <div class="col-lg-4" text-align: center;>
+                    <div class="col-lg-4" text-align: center>
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
                              <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
