--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <a href="https://paginas.matem.unam.mx/capella/" target="_blank"><h4>Dr. Antonio Capella</h4></a>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
-			    <div text-align: center>
+			    <div>
                              <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
 			    </div>
                     </div>
@@ -306,16 +306,16 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
                              <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
                         </div>
-			    <div text-align: center;>
+			    <div>
                              <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" padding: 50px> </a> <p class="text-muted"> IIMAS - UNAM </p>
 			    </div>
                     </div>
-                    <div class="col-lg-4" text-align: center>
+                    <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
                              <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
                         </div>
-			    <div>
+			    <div class="text-center">
                              <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted">CIMAT - CONAHCYT </p>
 			    </div>
                     </div>
