--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                              <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
                         </div>
 			    <div class="text-center">
-                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png" style="float:left" width="60" height="60" > </a> <p class="text-muted">CIMAT - CONAHCYT </p>
+                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png"  width="60" height="60" > </a> <p class="text-muted">CIMAT - CONAHCYT </p>
 			    </div>
                     </div>
                 </div>
