--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Working Network</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">People of interest</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                          
                     </ul>
@@ -286,7 +286,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Working Network</h2>
+                    <h2 class="section-heading text-uppercase">People of interest</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row">
