--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
 			    <div class="text-center">
-                             <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png" style="float:left" width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+                             <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/imate_logo.png"  width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
 			    </div>
                     </div>
 			
@@ -307,7 +307,7 @@
                              <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
                         </div>
 			    <div class="text-center">
-                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg" style="float:left" width="60" height="60" padding: 50px> </a> <p class="text-muted"> IIMAS - UNAM </p>
+                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg"  width="60" height="60" > </a> <p class="text-muted"> IIMAS - UNAM </p>
 			    </div>
                     </div>
                     <div class="col-lg-4">
