--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">About me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Research</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Education</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">People of interest</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#people">People of interest</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                          
                     </ul>
