--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </section>
 	    
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="research">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Research</h2>
@@ -148,7 +148,7 @@
 		
         </section>
         <!-- About-->
-        <section class="page-section" id="about">
+        <section class="page-section" id="education">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Education</h2>
