--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <section class="page-section bg-light" id="people">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">People of interest</h2>
