--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portafolio">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
                         <li class="nav-item"><a class="nav-link" href="#people">People of interest</a></li>
@@ -92,7 +92,7 @@
         </section>
 	    
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="research">
+        <section class="page-section bg-light" id="portafolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Research</h2>
