--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 					<li>Scientific Programming</li>
 				</ul>
                 	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
-			    <a href="assets/img/cv-2023-spanish.pdf"> English CV
+			<a href="assets/img/cv-2023-spanish.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
+			    <a href="assets/img/cv-2023-spanish.pdf" target="_blank"> English CV
 			</a> 
 				
 		    </p>    
@@ -573,7 +573,7 @@
                 </div>
             </div>
         </div>
-	-->
+	
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
