--- a/index.html
+++ b/index.html
@@ -140,12 +140,28 @@
                                 <img class="img-fluid" src="assets/img/portfolio/Articulo_3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">In preparation</div>
+                                <div class="portfolio-caption-heading">Preprint</div>
                                 <div class="portfolio-caption-subheading text-muted"> Nonlinear stability of static Neel walls in ferromagnetic thin films </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
 		
+                        <!-- Portfolio item 4-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Preprint</div>
+                                <div class="portfolio-caption-subheading text-muted"> Stability of moving Neel walls in ferromagnetic thin films </div>
+                            </div>
+                        </div>
+                    </div>
+				
         </section>
         <!-- About-->
         <section class="page-section" id="education">
@@ -467,6 +483,38 @@
                 </div>
             </div>
         </div>
+        <!-- Portfolio item 4 modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <!--<h2 class="text-uppercase">Stability of moving Neel walls in ferromagnetic thin films</h2>-->
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
+                                    <p class="item-intro text-muted">2023</p>
+			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
+					<ul class="list-inline">
+                                        <li>
+                                            <strong>Category:</strong>
+                                            Micromagnetism, Sprectral Theory, Kato's perturbation theory, and Nolinear Stability
+                                        </li>
+                                    </ul>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Close article
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 	<!-- Future work    
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
