--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                     <!--<h2 class="text-uppercase">Stability of moving Neel walls in ferromagnetic thin films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
-			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
+			            <p><a href="https://arxiv.org/pdf/2409.04023" target="_blank"> Go to arXiv</a></p>		
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
