--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                     <!--<h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/pdf/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
 				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
                                     <ul class="list-inline">
                                         <li>
@@ -433,7 +433,7 @@
                                     <!--<h2 class="text-uppercase">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_2_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/pdf/2012.06626.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://arxiv.org/abs/2012.06626.pdf" target="_blank"> Go to arXiv</a></p>
 				    <p><a href="https://link.springer.com/article/10.1007/s10659-021-09878-w" target="_blank"> Go to published version</a></p>
                                     <ul class="list-inline">
                                         <li>
@@ -496,7 +496,7 @@
                                     <!--<h2 class="text-uppercase">Stability of moving Neel walls in ferromagnetic thin films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
-			            <p><a href="https://arxiv.org/pdf/2409.04023" target="_blank"> Go to arXiv</a></p>		
+			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
