--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Preprint</div>
+                                <div class="portfolio-caption-heading">Accepted for publication</div>
                                 <div class="portfolio-caption-subheading text-muted"> Nonlinear stability of static Neel walls in ferromagnetic thin films </div>
                             </div>
                         </div>
