--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Published Article</div>
-                                <div class="portfolio-caption-subheading text-muted">On the quasiconvex hull for a three-well problem in two dimensional linear elasticity</div>
+                                <div class="portfolio-caption-subheading text-muted">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</div>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Published Article</div>
-                                <div class="portfolio-caption-subheading text-muted">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</div>
+                                <div class="portfolio-caption-subheading text-muted">On the Symmetric Lamination Convex and Quasiconvex Hull for the Coplanar n-well Problem in Two Dimensions</div>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Accepted for publication</div>
-                                <div class="portfolio-caption-subheading text-muted"> Nonlinear stability of static Neel walls in ferromagnetic thin films </div>
+                                <div class="portfolio-caption-subheading text-muted"> Nonlinear Stability of Static Neel Walls in Ferromagnetic Thin Films </div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Preprint</div>
-                                <div class="portfolio-caption-subheading text-muted"> Stability of moving Neel walls in ferromagnetic thin films </div>
+                                <div class="portfolio-caption-subheading text-muted"> Stability of Moving Neel Walls in Ferromagnetic Thin Films </div>
                             </div>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>-->
+                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
 				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
@@ -431,7 +431,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</h2>-->
+                                    <!--<h2 class="text-uppercase">On the Symmetric Lamination Convex and Quasiconvex Hull for the Coplanar n-well Problem in Two Dimensions</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_2_1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2022</p>
 				    <p><a href="https://arxiv.org/abs/2012.06626.pdf" target="_blank"> Go to arXiv</a></p>
@@ -463,7 +463,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">Nonlinear stability of static Neel walls in ferromagnetic thin films</h2>-->
+                                    <!--<h2 class="text-uppercase">Nonlinear Stability of Static Neel Walls in Ferromagnetic Thin Films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
 			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
@@ -494,7 +494,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">Stability of moving Neel walls in ferromagnetic thin films</h2>-->
+                                    <!--<h2 class="text-uppercase">Stability of Moving Neel Walls in Ferromagnetic Thin Films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
                                     <p class="item-intro text-muted">2023</p>
 			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
