--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Teacher online</h4>
+                        <h4 class="my-3">Remote Teacher</h4>
 			<p class="text-muted"><b>  Mathematics at UnADM</b></p>
 			<p class="text-muted"> Statistics I </p>
 			<p class="text-muted"> Multivariable calculus </p>
