--- a/index.html
+++ b/index.html
@@ -68,22 +68,24 @@
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
                             I consider myself a skilled person who easily adapts to different situations and working conditions.
-		             <br></br>		
-			    I am interested in the study of
-			    complex material phenomena such as phase transitions, nucleation,  and stability and dynamics of microstructure. 
+		             <br></br>	
+			    I am interested in studying coherent structures that emerge from nonlinear models of continuous media. 
+			    My recent work includes research on phase transitions in complex materials, the spectral and nonlinear stability of
+			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
 			</p>
 			<p class="text-muted">
 				<ul class="text-muted">
   					<li>Calculus of Variations</li>
- 					 <li>Partial Differential Equations</li>
+					<li>Spectral and Nonlinear Stability of Coherent Structures</li>
+ 					<li>Partial Differential Equations</li>
   					<li>Analysis</li>
 					<li>Statistics and Probability</li>
 					<li>Scientific Programming</li>
 				</ul>
                 	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
 			<a href="assets/img/cv-2024-spanish.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
-			    <a href="assets/img/cv-2024-english.pdf" target="_blank"> English CV
+			    <a href="assets/img/CV_2024_English_updated.pdf" target="_blank"> English CV
 			</a> 
 				
 		    </p>    
