--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                  <div class="masthead-subheading">Lauro Morales Montesinos</div>
                  <div class="masthead-subheading">IIMAS - UNAM</div>
                 <!-- <div class="masthead-heading text-uppercase">It's Nice To Meet You</div> -->
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#about">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
