--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a class="btn btn-primary btn-xl text-uppercase" href="#about">Tell Me More</a>
             </div>
         </header>
-        <!-- Services-->
+        <!-- About me-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
