--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</ul>
                 	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
 			<a href="assets/img/cv-2024-spanish.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
-			    <a href="assets/img/CV_2024_English_updated.pdf" target="_blank"> English CV
+			    <a href="assets/img/CV_2024_IE.pdf" target="_blank"> English CV
 			</a> 
 				
 		    </p>    
