--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 					<li>Scientific Programming</li>
 				</ul>
                 	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
-			<a href="assets/img/cv-2024-spanish.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
-			    <a href="assets/img/CV_2024_IE.pdf" target="_blank"> English CV
+			<a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
+			    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> English CV
 			</a> 
 				
 		    </p>    
