--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#talks">Talk</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
                         <li class="nav-item"><a class="nav-link" href="#people">People of interest</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -256,6 +257,58 @@
                 </ul>
             </div>
         </section>
+			
+	<!-- Talks-->
+        <section class="page-section bg-light" id="talks">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Recorded Talks</h2>
+                    <!-- <h3 class="section-subheading text-muted"> Thanks to my mentors and friends, I learned to apply mathematics at different fields</h3> -->
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/SEDNOL.jpg" alt="..." />
+                            <a href="https://www.youtube.com/watch?v=qt9jQ3tphfk" target="_blank"><h4>SEDNOL</h4></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
+                        </div>
+			    <!--<div class="text-center">
+                             <a href="https://www.matem.unam.mx/" target="_blank"> <img src="assets/img/logos/logo_imate.png"  width="60" height="60" > </a> <p class="text-muted"> IMATE - UNAM </p>
+			    </div> -->
+                    </div>
+			
+                    <!--<div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
+                             <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
+                        </div>
+			    <div class="text-center">
+                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg"  width="60" height="60" > </a> <p class="text-muted"> IIMAS - UNAM </p>
+			    </div>
+                    </div>-->
+		<!--	
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/hector.png" alt="..." />
+                             <a href="http://personal.cimat.mx:8181/~hector.chang/" target="_blank"><h4>Dr. Hector Chang</h4></a>
+                        </div>
+			    <div class="text-center">
+                             <a href="https://www.cimat.mx/" target="_blank"> <img src="assets/img/logos/cimat.png"  width="60" height="60" > </a> <p class="text-muted">CIMAT - CONAHCYT </p>
+			    </div>
+                    </div>
+                </div>
+	       -->		
+		<!-- 
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Thanks to my mentors and friends  I learned to apply mathematics at different fields</p></div>
+                </div>
+		-->
+            </div>
+        </section>
+        
+
+
+			
          <!-- Teaching-->
         <section class="page-section" id="teaching">
             <div class="container">
