--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#talks">Talk</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#talks">Talks</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
                         <li class="nav-item"><a class="nav-link" href="#people">People of interest</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -270,6 +270,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/SEDNOL.jpg" alt="..." />
                             <a href="https://www.youtube.com/watch?v=qt9jQ3tphfk" target="_blank"><h4>SEDNOL</h4></a>
+			    <p Spectral and nonlinear stability of Néel walls in ferromagnetic thin films </p>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
 			    <!--<div class="text-center">
