--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <section class="page-section bg-light" id="talks">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Recorded Talks</h2>
+                    <h2 class="section-heading text-uppercase">Talks</h2>
                     <!-- <h3 class="section-subheading text-muted"> Thanks to my mentors and friends, I learned to apply mathematics at different fields</h3> -->
                 </div>
                 <div class="row">
@@ -270,7 +270,11 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/SEDNOL.jpg" alt="..." />
                             <a href="https://www.youtube.com/watch?v=qt9jQ3tphfk" target="_blank"><h4>SEDNOL</h4></a>
-			    <p Spectral and nonlinear stability of Néel walls in ferromagnetic thin films </p>
+			    <p class="text-muted"> 
+				Spectral and nonlinear stability of 
+				    <br></br>
+				Néel walls in ferromagnetic thin films 
+			    </p>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
 			    <!--<div class="text-center">
