--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
 				    <br></br>
 				Néel walls in ferromagnetic thin films 
 			    </p>
+			    <h4 class="my-3"> (Spanish) </h4>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
 			    <!--<div class="text-center">
